view courses and institution resolution edits

--- a/recommender/institutions/templates/view_course.html
+++ b/recommender/institutions/templates/view_course.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <div class="bg-gradient-to-tr from-indigo-50 to-purple-100 pt-36 pb-20 px-4 flex justify-center">
+    <div class="min-h-screen bg-gradient-to-tr from-indigo-50 to-purple-100 pt-36 pb-20 px-4 flex justify-center">
 
         <div class="w-full max-w-xl bg-white border border-purple-300 shadow-lg rounded-2xl p-8 relative">
 
